# rick

./: .gitignore  Cargo.toml  README.md  sitemap.xml
.github/workflows/: create_release.yml
data/: mdn_urls.txt
src/: fzf.rs  main.rs  utils.rs
src/docs/: mdn.rs  mod.rs  tailwind.rs
src/todo/: mod.rs  todo_db.rs  todo_item.rs
utils/: fetch_mdn.py
