[package]
name = "rick"
version = "0.1.0"
edition = "2021"
author = "reaganmcf"
description = "A cross platform, general productivity tool that speeds up your workflows straight from the command line."
repository = "https://github.com/reaganmcf/rick"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
open = "3.2.0"
skim = "0.10.2"
