[package]
name = "rick"
version = "0.2.0"
edition = "2021"
description = "A cross platform, general productivity tool that speeds up your workflows straight from the command line."
repository = "https://github.com/reaganmcf/rick"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
jfs = "0.8.0"
open = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
termimad = "0.20.6"
